collects/tests/typed-racket/fail/bad-first.rkt
#lang typed-racket
(require scheme/list)
(first (cons 1 2))
